force-app/main/default/objects/SPEN_NonCompliance__c/SPEN_NonCompliance__c.object-meta.xml
<CustomObject>
    <description>Created as part of ESC-129.</description>
    <label>Non Compliance</label>
    <nameField>
        <displayFormat>NC-{000000}</displayFormat>
        <label>Non Compliance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Compliances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>