force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_AC_DateSettled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AC_DateSettled__c</fullName>
    <label>Agent Cost Date Settled</label>
    <type>Date</type>
</CustomField>