force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_AgentCost__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AgentCost__c</fullName>
    <label>Agent Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>