force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_Apparatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Apparatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apparatus</label>
    <referenceTo>SPEN_LP_Apparatus__c</referenceTo>
    <relationshipLabel>Non Compliances</relationshipLabel>
    <relationshipName>Non_Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>