force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_Compensation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Compensation__c</fullName>
    <label>Non-Compliance Compensation</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>