force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_Contractor__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contractor__c</fullName>
    <label>Contractor</label>
    <length>150</length>
    <type>Text</type>
</CustomField>