force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_ContractorSettlingAmount__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContractorSettlingAmount__c</fullName>
    <label>Contractor Direct Settlement (£)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>