force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_ContractorSettlingDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContractorSettlingDate__c</fullName>
    <label>Contractor Settlement Date</label>
    <type>Date</type>
</CustomField>