force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_DateReported__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateReported__c</fullName>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>