force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_Description__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Description__c</fullName>
    <label>Description of Non-Compliance</label>
    <length>150</length>
    <type>Text</type>
</CustomField>