force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_EvidenceStored_ERFile__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EvidenceStored_ERFile__c</fullName>
    <label>Photographic Evidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>