force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_ImpactedParty__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ImpactedParty__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Impacted Party</label>
    <referenceTo>SPEN_LandAssociation__c</referenceTo>
    <relationshipLabel>Non Compliances</relationshipLabel>
    <relationshipName>Non_Compliances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>