force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_ImpactRating__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ImpactRating__c</fullName>
    <label>Impact Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Med</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>