force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_IncidentDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentDate__c</fullName>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>