force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_LandInterest__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandInterest__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Land Right</label>
    <referenceTo>SPEN_Land_Interest__c</referenceTo>
    <relationshipLabel>Non Compliances</relationshipLabel>
    <relationshipName>Non_Compliances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>