force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_Location__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Location__c</fullName>
    <formula>SPEN_LandInterest__r.SPEN_LandAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>