force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_MitigationStepsTaken__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MitigationStepsTaken__c</fullName>
    <label>Mitigation Steps Taken</label>
    <length>150</length>
    <type>Text</type>
</CustomField>