force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_NC_DateSettled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NC_DateSettled__c</fullName>
    <label>Non-Compliance Date Settled</label>
    <type>Date</type>
</CustomField>