force-app/main/default/objects/SPEN_NonCompliance__c/fields/SPEN_NM_SettlementInfo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NM_SettlementInfo__c</fullName>
    <label>Non-Monetary Settlement Info</label>
    <length>150</length>
    <type>Text</type>
</CustomField>