force-app/main/default/objects/SPEN_NonCompliance__c/validationRules/SPEN_LandContactAssociatedWithNC.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_LandContactAssociatedWithNC</fullName>
    <active>true</active>
    <errorConditionFormula>SPEN_LandInterest__r.SPEN_Land__r.Id  &lt;&gt;  SPEN_ImpactedParty__r.SPEN_Land__r.Id</errorConditionFormula>
    <errorDisplayField>SPEN_ImpactedParty__c</errorDisplayField>
    <errorMessage>Please create an &apos;Access&apos; or &apos;Unknown&apos; Land Contact on the Land Right if the impacted land is owned by someone other than the Contracting Party and the Impacted party is not already a Land Contact on the associated Land Right.</errorMessage>
</ValidationRule>