force-app/main/default/objects/SPEN_NonCompliance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Status__c</columns>
    <columns>SPEN_LandInterest__c</columns>
    <columns>SPEN_ImpactedParty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>